# uv-burn

./: README.md  pyproject.toml
.github/workflows/: lint.yml  main.yml  publish-testpypi.yml  tag.yml
src/uv_burn/: convert.py  main.py  repository.py
src/uv_burn/models/: __init__.py  pipenv.py  pipenv_lock.py  pyproject.py  uv_lock.py
tests/integration/: conftest.py  test_compare_lock_files.py  test_secured_repo.py
tests/integration/docker/: Dockerfile  nginx.conf
tests/integration/test_case_data/compare_lock_files/: Pipfile  pyproject.toml
tests/integration/test_case_data/secured_repo/: pyproject.toml
