[project]
name = "uv-burn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=25.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "tomli-w>=1.2.0",
    "typer>=0.16.1",
]

[project.scripts]
uv-burn = "uv_burn:main.cli"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D200",
    "D203", # 1 blank line required before class docstring
    "D205", 
    "D211",
    "D212",
    "D202",
    "D400", # Firrst line should end with a period
    "D401",
    "D411",
    "D410",
    "D413",
    "D415", # First line should end with a period
    "COM812",
    "INP001",
    "TC001",
    "EM101",
    "EM102",
    "TRY003",
    "PLR0912",
    "C901",
    "TC002", # Use Typeching block
    "TC003", # Use Typeching block
    #"RUFFG004"
]
