[project]
name = "test-secured-repo"
version = "0.1.0"
description = "A test package for secured repository"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.7",
    "ruff>=0.12.0",
]
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"

[tool.uv.source]
ruff = { index = "secured-repo" }

[[tool.uv.index]]
name = "secured-repo"
url = "https://128.0.0.1:8080/simple/"
